crates/solidity/testing/snapshots/bindings_output/yul/for_init_variables/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[input.sol:5:45]
    │
  5 │ ╭─▶     function copy(bytes memory data) public pure returns (bytes memory result) {
    ┆ ┆   
 21 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 4 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 5 │     function copy(bytes memory data) public pure returns (bytes memory result) {
   │              ──┬─              ──┬─  
   │                ╰───────────────────── name: 2
   │                                  │   
   │                                  ╰─── name: 3
───╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  3 │ ╭─▶ 
    ┆ ┆   
  5 │ │       function copy(bytes memory data) public pure returns (bytes memory result) {
    │ │   ─────────────────────┬────┬────────────────  
    │ │                        ╰─────────────────────── definiens: 2
    │ │                             │                  
    │ │                             ╰────────────────── definiens: 3
    ┆ ┆   
 22 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 1
────╯
